--- a/client/src/components/SignupForm/styles.module.css
+++ b/client/src/components/SignupForm/styles.module.css
@@ -1,6 +1,6 @@
 .parentContainer {
   width: 100%;
-  padding: 2rem;
+  padding: 1rem;
 }
 .twoColsLargeScreens {
   display: flex;
@@ -15,6 +15,9 @@
 }
 
 @media (min-width: 768px) {
+  .parentContainer {
+    padding: 2rem;
+  }
   .twoColsLargeScreens > * {
     flex-basis: 48%;
   }
