--- a/client/src/pages/CenteredFormLayout/styles.module.css
+++ b/client/src/pages/CenteredFormLayout/styles.module.css
@@ -1,10 +1,11 @@
 .rootElement {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
   display: flex;
-  align-items: center;
   justify-content: center;
   overflow-y: auto;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 .parentContainer {
   width: 100%;
@@ -18,6 +19,12 @@
 
 /* small */
 @media (min-width: 576px) {
+  .rootElement {
+    height: 100vh;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
   .formContainer {
     max-width: 540px;
   }
