--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,9 @@
   width: 100%;
   margin: 0 auto;
 }
+body {
+  margin-bottom: 4rem;
+}
 
 /* small */
 @media (min-width: 576px) {
@@ -22,6 +25,9 @@
 
 /* medium */
 @media (min-width: 768px) {
+  body {
+    margin-bottom: 0;
+  }
   .container {
     max-width: 720px;
   }
