--- a/client/src/pages/HomeLayout/styles.module.css
+++ b/client/src/pages/HomeLayout/styles.module.css
@@ -15,6 +15,7 @@
 
 .rightPanel {
   padding: 1rem;
+  padding-bottom: 4rem;
 }
 
 .sidebar {
@@ -59,7 +60,7 @@
 }
 .flexRow {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 }
 
 
@@ -81,6 +82,7 @@
   .rightPanel {
     height: 100%;
     flex: 1 1 0;
+    padding-bottom: 1rem;
   }
   .sidebarButtonText {
     display: inline;
